* Fixed bug that selected the wrong algorithm for determinants of purely
  numeric matrices with at least one floating point element.
* Fixed bug in function H that caused an infinite recursion for arguments
  around +-I.
* Fixed const-correctness in printing handler for GCC 4.0.2
* Made lookup in adaptivesimpson precision-aware.
* Added fsolve() numerical univariate real-valued function solver.
* Small cleanups. Less warnings with latest GCC.

1.3.2 (10 July 2005)
* GCD avoids to produce expanded expressions.
* Fixed bug in expanding expressions containing dummy indices.
* Fixed static initialization order bug.
* collect_common_factors now works with powers.
* Modernized configuration scripts.

1.3.1 (04 May 2005)
* integral() and eval_integ() can be used from ginsh.
* Integrals can be series-expanded.
* Fixed a library initialization problem.
* GiNaC compiles from tarball even if lex/flex is missing.
* Fixed bugs in canonicalize_clifford(), clifford_prime() and clifford_to_lst().
* clifford_moebius_map(), remove_dirac_ONE() and LaTeX output of Clifford
  objects now care about representation labels.
* Fixed bug in gcd.
* Better output for slashed expressions

1.3.0 (19 October 2004)
* The Clifford classes have been generalized to allow working with Clifford
  algebras generated by arbitrary symmetric tensors or matrices. Also, a lot
  of new functions for Clifford algebras have been added, including
  automorphisms and Moebius transformations. [V. Kisil]
* Added some basic symbolic and numeric integration facilities. [C. Dams]
* The multiple polylogarithm Li() now evaluates numerically for arbitrary
  arguments.
* New functions G(a,y) and G(a,s,y) added (another notation for multiple
  polylogarithms).

1.2.4 (12 October 2004)
* Added ex::unitcontprim() to compute the unit, content, and primitive parts
  of a polynomial in one go.
* binomial(n, k) evaluates for non-integer arguments n.
* Li(2,x) now evaluates for +-I.
* Optimized Li(2,x).