@@ -10,6 +10,7 @@ This file records noteworthy changes.
 * Fixed const-correctness in printing handler for GCC 4.0.2
 * Made lookup in adaptivesimpson precision-aware.
 * Added fsolve() numerical univariate real-valued function solver.
+* Added functions sub_matrix() and reduced_matrix().
 * Small cleanups. Less warnings with latest GCC.
 
 1.3.2 (10 July 2005)
